# PyDotON

./: .gitignore  LICENSE  README.md  __init__.py  pydoton.py  pyproject.toml  setup-env  test_pydoton.py
max_patcher/dependables/: asm.bandpass.maxpat  asm.div.maxpat  asm.highpass.maxpat  asm.lowpass.maxpat  asm.phasor.maxpat
src/PyDotON.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pydoton/: __init__.py  example.py
tests/: test.json  test_deleting.py  test_fileio.py  test_iteration.py  test_parse_real_json.py  test_pydoton.py
tests/max_patcher/: asm.maxpat  asm2.maxpat  maxpatcher.json
tests/max_patcher/dependables/: asm.add.maxpat  asm.mov.maxpat  asm.mul.maxpat  asm.notch.maxpat  asm.return.maxpat  asm.sin_osc.maxpat  asm.square_osc.maxpat  asm.sub.maxpat  asm.triangle_osc.maxpat
tests/older/: dict_slash_path.py
